Now drools contains needs 'toString()' for working